localhost:8080/user.do (회원가입시 Bcypt 암호화 로직 업데이트) _ 2023.10.09 _ 김상욱

--- a/src/main/webapp/WEB-INF/view/common/top.jspf
+++ b/src/main/webapp/WEB-INF/view/common/top.jspf
@@ -4,4 +4,4 @@
 <head>
 <meta charset="UTF-8">
 <title>유닛</title>
-<script src="js/jquery-3.7.1.min.js"></script>
+<script type="text/javascript" src="/util/jquery-3.7.1.min.js"></script>
