스프링 시큐리티 로그인 DB 연동 업데이트 _ 2023.10.15 _ 김상욱

--- a/src/main/webapp/WEB-INF/view/common/top.jspf
+++ b/src/main/webapp/WEB-INF/view/common/top.jspf
@@ -1,7 +1,9 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+<%@taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %> 
+<%@taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %> 
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
 <title>유닛</title>
-<script type="text/javascript" src="/util/jquery-3.7.1.min.js"></script>
+<script type="text/javascript" src="/js/util/jquery-3.7.1.min.js"></script>
